-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 6.0.0-beta1
-
None
-
181a2927fe256dc73fa383b716697485d913c3b2 (qt-creator/qt-creator/6.0)
Shift-Tab indents instead of unindenting.
- is duplicated by
-
QTCREATORBUG-26464 Shift+tab increases indent instead of decreasing indent
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-26412 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 377486,2 | Editor: fix unindent | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |